--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#080808" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,7 +24,29 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Juan David Pérez - Juandis</title>
+    <title>Juan David Pérez</title>
+
+    <meta name="description" content="
+    I’m an interaction designer working on software and digital solutions, based on user experience design at Angular Diseño más Interacción, Cali, CO.">
+
+    <meta property="og:description" content="
+    I’m an interaction designer working on software and digital solutions, based on user experience design at Angular Diseño más Interacción, Cali, CO."/>
+    <meta property="og:title" content="Juan David Pérez" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://juandis.design" />
+    <meta property="og:image" content="%PUBLIC_URL%/og.jpg" />
+    <meta property="og:site_name" content="https://juandis.design" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113860104-7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-113860104-7');
+    </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
